# zephyr-recruitment-task

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/: native_posix.overlay
app/src/: main.c
drivers/: CMakeLists.txt  Kconfig
drivers/misc/: CMakeLists.txt  Kconfig
drivers/misc/dummy_driver/: CMakeLists.txt  Kconfig  dummy_driver.c  dummy_driver_priv.h
dts/bindings/misc/: dummy,dummy_driver.yaml
include/drivers/misc/dummy_driver/: dummy_driver.h
zephyr/: module.yml
